--- a/src/app/public/styles/globals.css
+++ b/src/app/public/styles/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +104,67 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+#app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-screen {
+  max-height: 100vh;
+  height: 100vh;
+  width: 100%;
+}
+
+.carousel-title {
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 20px;
+  max-width: 600px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+
+.carousel-img {
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
